--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ db.username = root
 #configuracion de JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#jwt
+secret.key = SEISEIKOIKIKI
+
