--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Unidad3
 
-db.url = jdbc:mysql://localhost:3306/almacenes
+db.url = jdbc:mysql://localhost:3306/almacenes1
 db.password = root
 db.username = root
 
